static/css/pages/subpages.scss
img + p,
img + ul,
img + h3,
img + h4 {
	margin-top: $space24;
}
img + h5 {
	margin-top: $space48;
}
.subpage hr {
	margin: $space48 auto;
}
// Type - Vertical spacing
h3 {
	margin-bottom: $space24;
}
h4 {
	margin-bottom: $space16;
}
// Spacing Code blocks
pre {
	margin-bottom: $space24;
}
.with-illustration + h4,
.with-illustration + h5,
.highlight + h4,
.highlight + h5 {
	margin-top: $space80;
}
// Page header 
.page-header {
	background: $header;
	color: #fff;
	height: 376px; // 440px if nav is included
	padding-top: 80px;
	margin-top: $space64;
	position: relative;
}
.docs .page-header,
.faq .page-header {
	height:320px;
}
.learn .page-header h1 {
	margin-bottom: $space8;
}
.page-header h2 {
	color: $graphite-blue;
}
.page-header .content-inner {
	position: relative;
	height: 296px;
}
.page-header img {
	position: absolute;
	bottom:0;
	right:176px;
	max-height: 420px;
	max-width: 340px;
	z-index: 400;
}
// Link jumps
.subpage a[name] {
	position: relative; 
	top: -346px;
	display: block;
}
.faq p,
.faq table,
.faq ul {
	max-width: 750px;
}
.align-right {
	max-width: 750px;
	width: 100%;
	float: right;
	clear:both;
}
.align-right p {
	max-width: 580px;
	width: 100%;
	text-align: left;
}
// Clearfix wrapper
.content-inner:after {
  content: "";
  display: table;
  clear: both;
}
// Learn nav
.learn-nav {
	border-bottom: 1px solid $separator;
	margin-bottom: $space80;
	padding-top: $space40;
}
.learn-nav a {
	color: $sidebar-links;
	position: relative;
	padding-bottom: $space48;
}
.learn-nav .active {
	border-bottom: 1px solid $blue;
	height: 180px;
	margin-bottom: -1px;
	z-index: 200;
}
.learn-nav .active.importing {
	border-color: $green;
}
.learn-nav .active.mirror {
	border-color: $purple;
}
.learn-nav .active.coffeescript {
	border-color: $cyan;
}
.learn-nav a * {
	@include transition(all, 0.1s, ease);
}
.learn-nav .nav-title {
	margin: $space24 0 $space16 0;
}
.learn-nav .active .nav-title {
	color: #222;
}
.learn-nav a:hover .nav-title {
	color: $blue;
}
.learn-nav .importing:hover .nav-title {
	color: $green;
}
.learn-nav .mirror:hover .nav-title {
	color: $purple;
}
.learn-nav .coffeescript:hover .nav-title {
	color: $cyan;
}
.learn-nav span {
	line-height: 1.5;
	opacity: 0.8;
}
.learn-nav a:hover,
.learn-nav a:hover span {
	opacity: 1;
}
.learn-nav .active span {
	opacity: 1;
}
.learn-nav-icons {
	position: relative;
	display: inline-block;
}
.learn-nav figure {
	display: inline-block;
}
.learn-nav .hover {
	position: absolute;
	top:0; left:0;
	opacity: 0;
}
// Fade old, bring in new
.learn-nav a:hover figure {
	opacity: 0;
}
.learn-nav a:hover .hover{
	opacity: 1;
}
// Sidebar
.sidebar {
	float:left;
	position: absolute;
	max-width: 210px;
	margin-top: 32px;
	width: 100%;
}
.learn .sidebar {
	margin-top: 310px;
}
.sidebar.sticky,
.learn .sidebar.sticky {
	position: fixed;
	margin-top: 0;
	top: 96px; // 32 + 64 = 96
}
.sidebar ul a li {
	padding: 12px 8px 8px 16px;
	color: $black;
	text-transform: uppercase;
	font-weight: 600;
	font-size:12px;
	letter-spacing: 0.5px;
	line-height: 1.2;
	margin-bottom: $space8;
	border-radius: 3px;
	list-style: none;
	left: 0;
}
.sidebar a div {
	color: $sidebar-links;
	margin-top:4px;
}
.sidebar .active {
	background: $blue;
	color: #fff;
}
.sidebar ul li.active:before {
	color: #fff;
}
.sidebar .active div {
	color: #fff;
}

// Page summaries
.summary {
	margin: $space80 0 0 0;
}
.summary ul {
	margin-bottom: 0;
}
.summary ul li {
	font-size: 18px;
	line-height: 1.4;
	list-style: none;
	padding-left: 0;
	left: 0;
}
.summary ul li:before {
	content: "";
	background: url("/static/images/learn/icon-learn-summary.png") no-repeat;
	background-size: contain;
	height:20px; width:14px;
	display: inline-block;
	margin-right: $space16;
	position: relative;
	top: 6px;
	float: left;
}
@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) { 
	.summary ul li:before {
		content: "";
		background: url("/static/images/learn/icon-learn-summary@2x.png") no-repeat;
		background-size: 100%;
	}
}
.summary figure,
.summary h3 {
	display: inline-block;
}
.summary figure {
	position: relative;
	top: -3px;
	margin-right: $space16;
}
.summary h3 {
	margin-bottom: $space24;
}

// Page-to-page navigation
.subpage-nav {
	// margin-top: $space80;
}
.subpage-nav .next {
	float: right;
}
.subpage-nav .previous {
	float: left;
	color: $graphite80;
}
.subpage-nav h6 {
	font-size: 18px;
}
.subpage-nav h6.last {
	color: $blue;
}
.subpage-nav a h6, .subpage-nav a figure {
	display: inline-block;
}
.subpage-nav figure {
	position: relative;
	top: 6px;
}
.subpage-nav .next figure {
	margin-left: $space16;
}
.subpage-nav .previous figure {
	margin-right: $space16;
}
// Inline images
.inline-left {
	float: left;
	margin-right: 60px;
}
hr.hidden {
	border-bottom-color: #fff;
	margin: $space24 auto;

}
.icon-mirror {
	margin-right:$space40;
	position: relative;
	top:4px;
}
.align-right img + p,
.align-right img + ol,
.align-right img + ul {
	max-width: 660px;
}

// Layer illustration blocks 
.layer-type-illustration {
	height:120px;
	width:100%;
	background: $blue;
	text-align: center;
	position: relative;
	padding-top: 34px;
	border-radius: 3px 3px 0 0;
}

.layer-type-illustration figure { // Icons within
	display: inline-block;
}
.layer-type-illustration.video {
	background: $cyan;
	padding-top: 34px;
}
.layer-type-illustration.html {
	background: $green;
	padding-top: 36px;
}
// Screenshots
.ss-mirror-iphone {
	margin-bottom: $space48;
}

@media screen and (max-width:1080px) {
	.page-header img {
		right:130px;
	}
	.align-right {
		max-width: 650px;
	}
	.col-4 {
		margin-right: 20px;
	}
	.layer-type-illustration {
        border-radius: 3px;
    }
}
@media screen and (max-width:980px) {
	.page-header img {
		right:0px;
	}
	.sidebar {
		display: none;
	}
	.learn-nav {
		padding-bottom: $space48;
	}
	.learn-nav a {
		padding-bottom: 0;
	}
	.learn-nav .active {
		border-bottom: none;
		height: auto;
		margin-bottom: 0;
	}
	// Custom learn nav col-4
	.learn-nav .col-4 {
		max-width: 150px;
		margin-right: 0;
	}
	.learn-nav .col-4:nth-child(2n) {
		margin-left: 0px;
	}
	.learn-nav .col-4 + .col-4 {
		margin-left:20px;
	}
	.learn-nav .col-4 {
		margin-bottom: 40px;
	}
	// Custom subpage inline col-4 elements
	.layer-types .col-4,
	.animation-curves .col-4 {
		max-width: 210px;
		margin: 0;
	}
	.layer-types .col-4:nth-child(2n),
	.animation-curves .col-4:nth-child(2n) {
		margin-left:0;
	}
	.layer-types .col-4+.col-4,
	.animation-curves .col-4+.col-4 {
		margin-left:10px;
	}
}
@media screen and (max-width:960px) {
	.page-header img {
		max-width: 300px;
		right: 24px;
	}
}
@media screen and (max-width: 720px) {
	.page-header {
		text-align: center;
		height: 460px;
		padding-top:24px;
	}
	.page-header .content-inner {
		height: 436px;
	}
	.page-header img {
		max-width: 210px;
		right: 50%;
		margin-right:-105px;
	}
	// Custom learn nav col-4
	.learn-nav .col-4 {
		max-width: 210px;
	}
	.learn-nav .col-4 + .col-4 {
		margin-left:0;
	}
	.learn-nav .col-4:nth-child(2n) {
		margin-left: 60px;
	}
	.learn-nav .col-4 {
		margin-bottom: 40px;
	}
	.summary ul li {
		font-size: 16px;
	}
}
@media screen and (max-width:560px) {
	.page-header {
		margin-top: 0;
	}
	.sidebar {
		padding-bottom:0;
		margin-bottom: $space40;
	}
	.sidebar .title {
		display: none;
	}
	.sidebar li {
		display: block;
	}
	.sidebar li+li {
		margin-top: 0;
		margin-left: 0;
	}
	.learn-nav {
		padding-top: 0;
		padding-bottom: 20px;
	}
	.learn-nav a {
		text-align: center;
	}
	.learn-nav figure {
		margin: 0 auto;
	}
	.learn-nav .nav-title {
		max-width: 100px;
		line-height: 1.4;
		margin: $space16 auto $space32 auto;
	}
	.learn-nav a span {
		display: none;
	}
	.learn-nav .col-4 {
		max-width:50%;
		margin:0;
	}
	.learn-nav .col-4+.col-4 {
		margin-right: 0;
		margin-top: 0;
	}
	.learn-nav .col-4:nth-child(2n) {
		margin-left: 0;
	}
	.col-4 + .col-4 {
		margin-top: $space16;
	}
}

